--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torch==1.8.2+cu111
 transformers==4.16.2
 scipy==1.8.0
 nltk
+progressbar
 coverage==4.3
 codeclimate-test-reporter == 0.2.3
 balck ==19.10b0
